# simple_setup_test_py_cpp

./: .buildinfo  .clang-format  .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.in  README.md  assumptions.html  codecov.yaml  genindex.html  index.html  installation.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  simple_setup_test_py.html  simple_setup_test_py.utils.html  simple_setup_test_py_cpp.html  useage.html
.doctrees/: assumptions.doctree  environment.pickle  index.doctree  installation.doctree  modules.doctree  simple_setup_test_py.doctree  simple_setup_test_py.utils.doctree  simple_setup_test_py_cpp.doctree  useage.doctree
.github/: FUNDING.yml
.github/workflows/: publish-documentation-html.yml  publish-package.yml  run-tests-windows.yml  run-tests.yml
_sources/: installation.rst.txt  simple_setup_test_py.rst.txt  simple_setup_test_py.utils.rst.txt  simple_setup_test_py_cpp.rst.txt
_static/css/: custom.css
docs/: assumptions.rst  conf.py  index.rst  modules.rst  useage.rst
docs-template/: custom-module-template.rst  index.html.jinja2  math.html.jinja2  module.html.jinja2
src/simple_setup_test_py/: __init__.py  simple_setup_test_py.py
src/simple_setup_test_py/utils/: comp_util.py
src/simple_setup_test_py_cpp/: CMakeLists.txt  __init__.py
src/simple_setup_test_py_cpp/calc/: SampleClass.cpp  SampleClass.h  TopologyCalc.h
src/simple_setup_test_py_cpp/pybind11/: CMakeLists.txt  calculations.cpp  simple_setup_test_py_cpp.cpp
tests/: CMakeLists.txt  __init__.py  lsan.supp
tests/simple_setup_test_py/: __init__.py  test.cpp  test_calc.cpp  test_headers.cpp  test_sample_class.cpp  test_sample_class.py  test_utils.py  test_vector_utils.cpp
tests/simple_setup_test_py/utils/: testOptimizeDf.py  testUtils.py
